fix input stuck in ios device

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,6 @@
   margin: 0;
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
-  user-select: none;
 }
 
 html {
